--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -170,8 +170,7 @@ kinematic distributions are not altered
 by coupling variations, neither for the on-shell Dark Matter production where $\mMed>2\mDM$,
 nor for the off-shell DM production where $\mMed<2\mDM$. Only the production cross sections change.
 Differences in kinematic distributions are expected only close to the transition region where both on-shell and off-shell decays occur.
-%TODO clarify slide 9 and 10 in https://indico.cern.ch/event/389275/contribution/1/material/slides/0.pdf
-%TODO check explicitly for V and A (generate corresponding samples)
+
 \begin{figure*}
 \centering
 \includegraphics[width=0.95\textwidth]{figures/monojet/scan_g_V_10_1000.eps}
@@ -306,7 +305,7 @@ Dark Matter masses in Fig.\,\ref{fig:monojet_VAmodels}. %The minimal width betwe
 No differences in the shape of the \MET distributions are observed between the samples with coincident masses. 
 %\Todo{Do we want to propose to generate one model only and refer to the cross section tables in HEPData repository for the other?}
 In the case of the on-shell Dark Matter pair production where $2\mDM\ll\mMed$, the cross sections of the pure vector and pure axial-vector models are similar. With increasing Dark Matter mass towards the $2\mDM=\mMed$ transition and beyond into the off-shell production regime, the relative difference between the cross sections of the two samples is increasing, with the vector samples having larger cross sections. 
-%TODO \Todo{This can be understood in the eikonal approximation since the A terms have an additional $v^2$ in front.}
+%{This can be understood in the eikonal approximation since the A terms have an additional $v^2$ in front.}
 
 \begin{figure*}
 	\centering
@@ -921,7 +920,6 @@ Constant colors indicate the lines along which the cross section scaling works p
 	\includegraphics[page=2, trim=305 195 305 195, clip, width=0.49\textwidth]{figures/monojet/rescalingexercise.pdf}\\
 	\includegraphics[page=3, trim=300 190 300 190, clip, width=0.49\textwidth]{figures/monojet/rescalingexercise.pdf}
 	\caption{Scaling along the lines of constant width. The line of constant width for $\mMed=300$~\gev and $\mDM=100$~\gev, intercepting $\gq=\gDM=4$ is shown on left. The generated and rescaled cross sections are compared in the middle, the corresponding ratio is shown on right.}
-	%TODO ask Uli for the color code
 	\label{fig:monojet_scaling_constwidth}
 \end{figure*}
 
