--- a/doc/tex/TChannelModels.tex
+++ b/doc/tex/TChannelModels.tex
@@ -378,7 +378,7 @@ DM searches should also directly test their sensitivity to the MSSM benchmark mo
 
 The state of the art calculation for these models is LO and they can be interfaced with a parton shower program.
 The studies in this Section use a LO model implementation within \madgraph v2.2.3, but no parton shower could be employed
-in the time-frame of the conclusions of this Forum. Further implementation details can be found in Section~\label{sec:tchannel_implementation}
+in the time-frame of the conclusions of this Forum. Further implementation details can be found in Section~\label{sec:tchannel_implementation}.
 
 \subsection{Parameter scan}
 
